Tagging system added

--- a/css/edit.less
+++ b/css/edit.less
@@ -8,6 +8,11 @@
       margin-top: 7px;
     }
   }
+  .footnote {
+    font-size: small;
+    color: darkgray;
+    text-align: right;
+  }
   #description-preview {
     color: #6c6c6c;
   }
